--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,9 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --title-text-color: #DB00FF;
+  --description-text-color: #000028;
+  --text-shadow: 4px 4px 0px #FF0070;
+  --accent-color: #FF0070;
+  --section-text-color: #F1B2CE;
 }
