--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,12 +9,10 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --bg-image: url('../images/cover-image-dark.png');
-  --title-text-color: #DB00FF;
+  --bg-image: url("../images/cover-image-dark.png");
+  --title-text-color: #db00ff;
   --description-text-color: #000028;
-  --accent-color: #FF0070;
-  --section-text-color: #F1B2CE;
-  --section-title-color: #FF0070;
+  --accent-color: #ff0070;
+  --section-text-color: #f1b2ce;
+  --section-title-color: #ff0070;
 }
-
-
