--- a/styles/light.css
+++ b/styles/light.css
@@ -9,11 +9,10 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --bg-image: url('../images/cover-image-light.png');
-  --title-text-color: #FFC2E6;;
+  --bg-image: url("../images/cover-image-light.png");
+  --title-text-color: #ffc2e6;
   --description-text-color: #353430;
-  --accent-color: #FF8DCB;
+  --accent-color: #ff8dcb;
   --section-text-color: #353430;
   --section-title-color: #353430;
-
 }
