--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,10 +4,10 @@
   --font-weight-regular: 400;
   --font-weight-bold: 700;
 
-  --bg-image: url('../images/cover-image-dark.png');
-  --title-text-color: #DB00FF;
+  --bg-image: url("../images/cover-image-dark.png");
+  --title-text-color: #db00ff;
   --description-text-color: #000028;
-  --accent-color: #FF0070;
-  --section-text-color: #F1B2CE;
-  --section-title-color: #FF0070;
+  --accent-color: #ff0070;
+  --section-text-color: #f1b2ce;
+  --section-title-color: #ff0070;
 }
