--- a/styles/light.css
+++ b/styles/light.css
@@ -15,5 +15,6 @@
   --accent-color: #ff8dcb;
   --section-text-color: #353430;
   --section-title-color: #353430;
+  --bg-color: #FFC2E6;
   --rec: none;
 }
