--- a/styles/dark.css
+++ b/styles/dark.css
@@ -15,5 +15,6 @@
   --accent-color: #ff0070;
   --section-text-color: #f1b2ce;
   --section-title-color: #ff0070;
+  --bg-color: #000028;
   --rec: flex;
 }
