--- a/styles/style.css
+++ b/styles/style.css
@@ -188,15 +188,8 @@
   margin-block-start: 20px;
 }
 
-.section__title-advice {
-  color: var(--description-text-color);
-  background-color: var(--accent-color);
-  font-family: var(--font-family);
-  font-size: var(--font-size-base);
-  font-style: normal;
+.section__subtitle_weight-regular {
   font-weight: var(--font-weight-regular);
-  line-height: 23.4px;
-  margin-block-start: 20px;
 }
 
 .section__subtitle-advice-shift {
@@ -264,10 +257,7 @@
 @media (width >= 768px) {
 
   .header {
-    padding-inline-end: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    
   }
 
   .title {
