--- a/styles/light.css
+++ b/styles/light.css
@@ -14,6 +14,10 @@
     --section-title-color: #353430;
     --bg-color: #FFC2E6;
     --rec: none;
+    --decorated-color: #353430;
+    --decorated-color-link: #353430;
+    --decorated-color-transparent: #35343066;
+
   }
 }
 
