--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@
   margin-block-start: 0.75rem;
   bottom: 10px;
   left: 10px;
+  border-color: var(--decorated-color);
 }
 
 .decorated-zone::before {
@@ -31,6 +32,7 @@
   position: absolute;
   top: 10px;
   right: 10px;
+  border-color: var(--decorated-color);
 }
 
 .rec {
@@ -65,21 +67,25 @@
   font-weight: var(--font-weight-regular);
   line-height: 18px;
   background-color: transparent;
-  color: var(--accent-color);
+  color: var(--decorated-color);
   border: none;
   padding-inline: 13px;
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid var(--accent-color);
+  border: 1px solid var(--decorated-color-transparent);
 }
 
 .header__theme-menu-button:focus {
-  border-bottom: 1px solid var(--accent-color);
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--decorated-color);
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--accent-color);
+  border: 1px solid var(--decorated-color);
 }
 
 .header__theme-menu {
@@ -143,11 +149,15 @@
 }
 
 .link:hover {
-  text-decoration: underline;
+  border-bottom: 1px solid var(--decorated-color-link);
 }
 
 .link:focus {
-  border: 1px solid var(--description-text-color);
+  outline: none;
+}
+
+.link:focus-visible {
+  border: 1px solid var(--decorated-color-link);
 }
 
 .page {
@@ -374,20 +384,42 @@
 }
 
 @media (width >= 1024px) {
-
   .section__grid {
     display: grid;
     grid-template-columns: 1fr 2.06fr;
     column-gap: 20px;
   }
 
+  .header__theme-menu {
+    align-self: self-start;
+    justify-self: center;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+    gap: 10px;
+  }
+
+  .main {
+    padding-inline: 0 20px;
+  }
+
+  .section__title-width {
+    max-width: 315px;
+  }
+
   .section__content {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
   }
 
   .section__pair {
     display: flex;
     flex-direction: column;
+  }
+
+  .section-advices {
+    margin-block-start: 40px;
   }
 }
