--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,4 +11,7 @@
   --section-text-color: #f1b2ce;
   --section-title-color: #ff0070;
   --rec: flex;
+  --decorated-color: #FF0070;
+  --decorated-color-link: #F1B2CE;
+  --decorated-color-transparent: #FF007066;
 }
