--- a/styles/style.css
+++ b/styles/style.css
@@ -295,12 +295,8 @@
   }
 
   .main {
-    padding-inline: 15px 5px;
+    padding-inline: 10px;
     margin-block-start: 30px;
-  }
-
-  .section {
-    padding-inline: 20px 0;
   }
 
   .section__title {
@@ -337,7 +333,7 @@
   }
 
   .gallery {
-    padding: 0 0 0 20px;
+    padding: 0 10px;
     margin-block-start: 69px;
   }
 
